--- a/TournamentOrganizer/MainPage.xaml
+++ b/TournamentOrganizer/MainPage.xaml
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TournamentOrganizer.MainPage">
+             xmlns:local="clr-namespace:TournamentOrganizer"
+             xmlns:ViewModels="clr-namespace:TournamentOrganizer.ViewModels"
+             xmlns:DataModels="clr-namespace:TournamentOrganizer.DataModels"
+             x:Class="TournamentOrganizer.MainPage"
+             Title="{Binding Title}">
+
+    <!-- Set ViewModel -->
+    <ContentPage.BindingContext>
+        <ViewModels:MainPageViewModel/>
+    </ContentPage.BindingContext>
 
     <ScrollView>
         <VerticalStackLayout
@@ -28,12 +37,7 @@
                 FontSize="18"
                 HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+            <Picker x:Name="TournamentTypePicker" Title="Select a Tournament Type:"></Picker>
 
         </VerticalStackLayout>
     </ScrollView>
