Populated the "Select Tournament Type" dropdown box.

--- a/TournamentOrganizer/MainPage.xaml
+++ b/TournamentOrganizer/MainPage.xaml
@@ -31,7 +31,7 @@
                 FontSize="18"
                 HorizontalOptions="Center" />
 
-            <Picker x:Name="TournamentTypePicker" HorizontalOptions="Center" Title="Select a Tournament Type:"></Picker>
+            <Picker x:Name="TournamentTypePicker" HorizontalOptions="Center" Title="Select a Tournament Type:" ItemsSource="{Binding TournamentTypes}"></Picker>
 
         </VerticalStackLayout>
     </ScrollView>
