--- a/TournamentOrganizer/MainPage.xaml
+++ b/TournamentOrganizer/MainPage.xaml
@@ -32,7 +32,7 @@
 
             <Picker x:Name="TournamentTypePicker" HorizontalOptions="Center" Title="Select a Tournament Type:" ItemsSource="{Binding TournamentTypes}" SelectedIndex="{Binding SelectedTournamentIndex}"></Picker>
 
-            <Label Text="{Binding Tournament.Description}"/>
+            <Label x:Name="DescriptionLabel" HorizontalOptions="Center" Text="{Binding TournamentDescription}"/>
 
         </VerticalStackLayout>
     </ScrollView>
