Added navigation between the main page and the addParticipants page.

--- a/TournamentOrganizer/MainPage.xaml
+++ b/TournamentOrganizer/MainPage.xaml
@@ -34,7 +34,7 @@
             <Picker x:Name="TournamentTypePicker" HorizontalOptions="Center" Title="Select a Tournament Type:" ItemsSource="{Binding TournamentTypes}" SelectedIndex="{Binding SelectedTournamentIndex}"></Picker>
 
             <!-- Button to move to the next page -->
-            <Button x:Name="ProgressToAddParticipantsPageButton" HorizontalOptions="Center" Text="Next"/>
+            <Button x:Name="ProgressToAddParticipantsPageButton" HorizontalOptions="Center" Text="Add Users" Command="{Binding ProgressToAddParticipantsPageCommand}"/>
 
             <!-- Tournament type description. (Still deciding if I want to do this here) -->
             <Label x:Name="DescriptionLabel" HorizontalOptions="Center" Text="{Binding TournamentDescription}"/>
