--- a/TournamentOrganizer/Views/AddParticipantsPage.xaml
+++ b/TournamentOrganizer/Views/AddParticipantsPage.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TournamentOrganizer.Views.AddParticipantsPage"
-             Title="AddParticipantsPage">
+             xmlns:viewModel="clr-namespace:TournamentOrganizer.ViewModels"
+             x:DataType="viewModel:AddParticipantsPageViewModel"
+             Title="{Binding Title}">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Add/Remove Participants"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Button Text="Back" Command="{Binding GoBackCommand}" />
     </VerticalStackLayout>
 </ContentPage>
