Added the ability to customize the names of Enum values and then retrieve those customized names. This was done to allow me to retrieve"Round Robin" instead of "RoundRobin" from the TournamentType names, and do the same anytime that comes up in the future.
Also, moved the additional pages to the base namespace.

--- a/TournamentOrganizer/AddParticipantsPage.xaml
+++ b/TournamentOrganizer/AddParticipantsPage.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TournamentOrganizer.Views.AddParticipantsPage"
+             x:Class="TournamentOrganizer.AddParticipantsPage"
              xmlns:viewModel="clr-namespace:TournamentOrganizer.ViewModels"
              x:DataType="viewModel:AddParticipantsPageViewModel"
              Title="{Binding Title}">
     <VerticalStackLayout>
+        <Label Text="{Binding Tournament.Type}" />
         <Label 
             Text="Add/Remove Participants"
             VerticalOptions="Center" 
