FINALLY got object passing working between pages. Was successfully able to pass a Tournament object from the Main Page to the Participants Page.

--- a/TournamentOrganizer/MainPage.xaml
+++ b/TournamentOrganizer/MainPage.xaml
@@ -24,7 +24,7 @@
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to Tournament Organizer"
+                Text="Welcome to Tournament Organizer, Please select a Tournament Type"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Setup and run a tournament."
                 FontSize="18"
