--- a/TournamentOrganizer/ParticipantsPage.xaml
+++ b/TournamentOrganizer/ParticipantsPage.xaml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TournamentOrganizer.AddParticipantsPage"
+             x:Class="TournamentOrganizer.ParticipantsPage"
              xmlns:viewModel="clr-namespace:TournamentOrganizer.ViewModels"
-             x:DataType="viewModel:AddParticipantsPageViewModel"
+             x:DataType="viewModel:ParticipantsPageViewModel"
              Title="{Binding Title}">
     <VerticalStackLayout>
-        <Label Text="{Binding Tournament.Type}" />
         <Label 
             Text="Add/Remove Participants"
             VerticalOptions="Center" 
